--- a/artillery/reactive-stress.yml
+++ b/artillery/reactive-stress.yml
@@ -3,7 +3,6 @@ config:
   phases:
     - duration: 60
       arrivalRate: 5
-      rampTo: 10
       name: Warm up
   ensure:
     maxErrorRate: 1
@@ -11,8 +10,9 @@ config:
   # Load the Playwright engine:
   engines:
     playwright:
+      globalTimeout: 240000
       launchOptions:
-        slowMo: 100
+        slowMo: 500
   # Path to JavaScript file that defines Playwright test functions
   processor: '../tests/test-helpers.js'
 scenarios:
