--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@playwright/test": "^1.45.2",
     "@types/node": "^20.14.11",
     "artillery": "^2.0.17",
+    "m": "^1.9.0",
     "minimist": "^1.2.8",
     "pidusage": "^3.0.2"
+  },
+  "volta": {
+    "node": "20.16.0"
   }
 }
