--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,15 @@
 function @tasks-3 {
-  METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor' ./scripts/monitor.sh tasks-3.x reactive-stress.yml reactive
+  MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor' ./scripts/monitor.sh tasks-3.x reactive-stress.yml reactive
+}
+
+function @tasks-3-non-reactive {
+  MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor' ./scripts/monitor.sh tasks-3.x non-reactive-stress.yml non-reactive
+}
+
+function @tasks-2 {
+  MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor-2' ./scripts/monitor.sh tasks-2.x reactive-stress.yml reactive
+}
+
+function @tasks-2-non-reactive {
+  MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor-2' ./scripts/monitor.sh tasks-2.x non-reactive-stress.yml non-reactive
 }
