add base bandwidth monitoring

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,17 @@
+function @tasks-3-non-checkout {
+  MONITOR_EXTRAS=true ./scripts/monitor.sh tasks-3.x reactive-stress.yml reactive
+}
+
 function @tasks-3 {
   MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor' ./scripts/monitor.sh tasks-3.x reactive-stress.yml reactive
 }
 
 function @tasks-3-non-reactive {
   MONITOR_EXTRAS=true METEOR_CHECKOUT_PATH='/Users/leonardo/Repositories/meteor/meteor' ./scripts/monitor.sh tasks-3.x non-reactive-stress.yml non-reactive
+}
+
+function @tasks-2-non-checkout {
+  MONITOR_EXTRAS=true ./scripts/monitor.sh tasks-2.x reactive-stress.yml reactive
 }
 
 function @tasks-2 {
